tests/NormalTests/paczka1/fuzzy1/60274468.err
Error in line 1: 4dJ9v S325 15,8
Error in line 17: S325 S117 12,09
Error in line 12: 4dJ9v A976 63,5
Error in line 5: S325 S117 3,2
Error in line 28: OPlY0 A881 41,5
Error in line 30: ilBFfrji9Aa S325 98,1
